--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Belgrano&family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600&display=swap');
 @import './mediaqueries';
 // fonts
 $title: 'Lobster',
 cursive;
 $text: 'Belgrano',
 serif;
-
+$aux: 'Nunito Sans',
+sans-serif;
 //metrics
 
 $container: 1270px;
