--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -17,6 +17,7 @@ $primary: #781557;
 $secondary: #22693c;
 $bg_light:#fffbef;
 $text_color:#292929;
+$text_grey:#696969;
 $white: #fff;
 $black: #000;
 $alert:#D80027;
