[ABOUTUS] add logical and components in section

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,12 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Belgrano&family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600&display=swap');
 @import './mediaqueries';
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 // fonts
 $title: 'Lobster',
 cursive;
 $text: 'Belgrano',
 serif;
 $aux: 'Nunito Sans',
+sans-serif;
+
+$karla: 'Karla',
 sans-serif;
 //metrics
 
