[LP-packs] add content packs

--- a/src/layout/Header.scss
+++ b/src/layout/Header.scss
@@ -32,7 +32,7 @@
         color: $secondary;
         margin: 0 5px;
 
-        &.acive,
+        &.active,
         &:hover {
           color: $primary;
         }
