[LP-treatments] add treatments

--- a/src/pages/Home/components/treatmenets/treamentsHome.scss
+++ b/src/pages/Home/components/treatmenets/treamentsHome.scss
@@ -1,6 +1,6 @@
 @import '../../../../scss/variables';
 
-.treatments {
+.treatments__home {
   text-align: center;
   background-color: $bg_light;
   padding-bottom: 80px;
