--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -2,11 +2,16 @@
 
 .title {
   color: $secondary;
-  font-size: 40px;
-
+  font-size: 20px;
   font-weight: 300;
   font-family: $text;
-  margin-bottom: 20px;
-  line-height: 45px;
+  margin-bottom: 15px;
+  line-height: 24px;
 
+  @include desktop {
+    font-size: 40px;
+    font-weight: 300;
+    margin-bottom: 20px;
+    line-height: 45px;
+  }
 }
