--- a/src/layout/Header.scss
+++ b/src/layout/Header.scss
@@ -39,6 +39,10 @@
       }
     }
 
+    .header__menu--burger {
+      cursor: pointer;
+    }
+
     .header__menu--social-media {
       a {
         color: $secondary;
