--- a/src/pages/Home/components/welcome/welcome.scss
+++ b/src/pages/Home/components/welcome/welcome.scss
@@ -9,12 +9,12 @@
 
   h3 {
     color: $secondary;
-    font-size: 40px;
-    width: 600px;
+    font-size: 20px;
+    width: 100%;
     font-weight: 300;
     font-family: $text;
     margin-bottom: 20px;
-    line-height: 45px;
+    line-height: 25px;
   }
 
   p {
@@ -35,6 +35,15 @@
       transform: scale(1.2);
     }
 
+  }
+
+  @include desktop {
+    width: 600px;
+
+    h3 {
+      font-size: 40px;
+      line-height: 45px;
+    }
   }
 
 }
