--- a/src/layout/Header.scss
+++ b/src/layout/Header.scss
@@ -1,10 +1,8 @@
 @import '../scss/variables';
 
 .header__container {
-  min-height: 100px;
-  padding-left: 40px;
-  padding-right: 40px;
-
+  min-height: 50px;
+  padding: 10px;
   background-color: $bg_light;
   display: flex;
   flex-direction: row;
@@ -12,7 +10,7 @@
   align-items: center;
 
   .header__logo {
-    max-width: 200px;
+    max-width: 120px;
 
     img {
       width: 100%;
@@ -52,6 +50,20 @@
         &:hover {
           color: $primary;
         }
+      }
+    }
+  }
+
+  @include desktop {
+    min-height: 100px;
+    padding-left: 40px;
+    padding-right: 40px;
+
+    .header__logo {
+      max-width: 200px;
+
+      img {
+        width: 100%;
       }
     }
   }
