--- a/src/components/HeroImage/HeroImage.scss
+++ b/src/components/HeroImage/HeroImage.scss
@@ -7,7 +7,7 @@
   }
 
   .bg {
-    max-width: 500px;
+    // max-width: 500px;
     height: calc(100vh - 100px);
 
     img {
@@ -24,7 +24,7 @@
     text-align: center;
 
     p {
-      font-size: 24px;
+      font-size: 30px;
       color: $white;
       font-weight: 300;
       padding: 0 50px 50px;
