--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -9,8 +9,8 @@
   border-radius: 50px;
 
   &.btn-small {
-    padding: 0 15px;
-    font-size: 12px;
+    padding: 5px 20px;
+    font-size: 16px;
     line-height: 23px;
   }
 
