fix style mobile 5

--- a/src/pages/Collaborators/collaborators.scss
+++ b/src/pages/Collaborators/collaborators.scss
@@ -1,13 +1,23 @@
+@import '../../scss/variables';
+
 .collaborators {
   text-align: center;
 
   .collaborators__grid {
-    max-width: 900px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    ;
     grid-gap: 10px;
     padding-bottom: 70px;
   }
 
+  @include desktop {
+    .collaborators__grid {
+      max-width: 900px;
+
+      grid-template-columns: 1fr 1fr 1fr;
+
+    }
+  }
 }
