--- a/src/pages/Treatments/treatments.scss
+++ b/src/pages/Treatments/treatments.scss
@@ -1,3 +1,5 @@
+@import '../../scss/variables';
+
 .treatments {
   text-align: center;
 
@@ -5,9 +7,16 @@
     max-width: 900px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
     padding-bottom: 70px;
+  }
+
+  @include desktop {
+    .treatments__grid {
+      grid-template-columns: 1fr 1fr 1fr;
+
+    }
   }
 
 }
