--- a/src/components/BoxImage/BoxImage.scss
+++ b/src/components/BoxImage/BoxImage.scss
@@ -17,14 +17,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 40px;
-    opacity: 0;
-    top: 0;
+    padding: 15px;
+
     left: 0;
     bottom: 0;
     right: 0;
     width: 100%;
-    height: 100%;
+    height: 40%;
     z-index: 1;
     transition: opacity 0.7s;
     font-weight: 600;
@@ -32,10 +31,10 @@
     background-color: rgba($color: $secondary, $alpha: 0.85);
 
     h3 {
-      font-size: 22px;
+      font-size: 15px;
       font-weight: 300;
       color: $white;
-      line-height: 30px;
+      line-height: 20px;
     }
   }
 
@@ -47,5 +46,25 @@
 
   img {
     width: 100%;
+  }
+
+  @include desktop {
+    .boximage__title {
+      opacity: 0;
+      top: 0;
+      height: 100%;
+      padding: 40px;
+
+      h3 {
+        font-size: 22px;
+        line-height: 30px;
+      }
+    }
+
+    &:hover {
+      .boximage__title {
+        opacity: 1;
+      }
+    }
   }
 }
