--- a/src/pages/Contact/contact.scss
+++ b/src/pages/Contact/contact.scss
@@ -4,7 +4,9 @@
   padding: 35px 0;
 
   h2 {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
+    font-size: 28px;
+    font-weight: 600;
   }
 
   h3 {
