--- a/src/components/BoxImage/BoxImage.scss
+++ b/src/components/BoxImage/BoxImage.scss
@@ -15,6 +15,7 @@
   .boximage__title {
     position: absolute;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 15px;
@@ -31,8 +32,16 @@
     background-color: rgba($color: $secondary, $alpha: 0.85);
 
     h3 {
-      font-size: 15px;
+      font-size: 16px;
       font-weight: 300;
+      color: $white;
+      line-height: 20px;
+    }
+
+    p {
+      font-size: 14px;
+      font-weight: 300;
+      font-family: $karla;
       color: $white;
       line-height: 20px;
     }
